[Eletromagnetismo]: Avanços nas notas de Eletromagnetismo

--- a/2nd year/2nd Semester/Eletromagnetismo/eletromagnetismo.tex
+++ b/2nd year/2nd Semester/Eletromagnetismo/eletromagnetismo.tex
@@ -1,13 +1,37 @@
 \documentclass{article}
 \usepackage[utf8]{inputenc}
+\usepackage[portuguese]{babel}
 
 \title{Notas de Eletromagnetismo 2018/2019 \thanks{Fundamentos de Física de Halliday e Resnick}}
 \author{Pedro Alexandre Gonçalves Ribeiro a85493}
-\date{February 13, 2019}
+\date{13 de Fevereiro de 2019}
 \begin{document}
 \maketitle
 \tableofcontents
-\section{Introduction}
+\newpage
+\section{Introdução}
+A física do eletromagnetismo foi estudada pela primeira vez pelos filósofos da Grécia antiga, que descobriram que se um pedaço de âmbar fosse friccionado e depois aproximado de pedacinhos de palha, a palha seria atraída pelo âmbar. Hoje sabemos a atração entre o âmbar e a palha se deve a uma força elétrica. Os filósofos gregos também observaram que se um tipo de pedra (um íman natural) fosse aproximado de objeto de ferro, o objeto seria atraído pela pedra. Hoje sabemos que a atração entre os ímans e os objetos de ferro se deve a uma força magnética.
 
-
+\section{Cargas Elétricas}
+% Cargas Elétricas
+\subsection{Cargas Elétricas}
+Na verdade todos os corpos possuem muitas cargas elétricas. A carga elétrica é uma propriedade intrínseca das partículas fundamentais de que é feita a matéria; em outras palavras, é uma propriedade associada à própria existência das partículas.
+\begin{itemize}
+\item Quando existe igualdade (ou equilíbrio) de cargas, dizemos que o objeto é eletricamente neutro, ou seja, a carga total do objeto é zero.
+\item Quando as quantidades dos dois tipos de cargas são diferentes, a carga total do objeto é diferente de zero e dizemos que o objeto está eletricamente carregado.
+\end{itemize}
+Os objetos eletricamente carregados interagem exercendo uma força sobre outros objetos. Para observar essa força, podemos carregar um bastão de vidro friccionado uma das extremidades com um pedaço de seda. Nos pontos de contacto entre o bastão e a seda, pequenas quantidades de carga são transferidas de um material para o outro, rompendo a neutralidade elétrica de ambos. (Friccionamos a seda no bastão para aumentar o número de pontos de contacto e, portanto, a quantidade de cargas transferidas).
+% Condutores e Isoladores
+\subsection{Condutores e Isoladores}
+Os materiais podem ser classificados de acordo com a facilidade com a qual as cargas se movem no seu interior. Nos condutores, como cobre dos fios elétricos, o corpo humano e a água da torneira, as cargas elétricas se movem com facilidade. Nos não condutores, também conhecidos como isoladores, como os plásticos do isolamento dos fios, a borracha, o vidro e a água destilada, as cargas não se movem. Os semicondutores, como o silício e o germânio, possuem propriedades elétricas intermediárias entre as dos condutores e as dos não condutores. Os supercondutores são condutores perfeitos, materiais nos quais as cargas se movem sem encontrar nenhuma resistência.
+% Lei de Coloumb
+\subsection{Lei de Coloumb}
+Duas partículas carregadas exercem forças uma sobre a outra. Se as cargas das partículas têm o mesmo sinal, as partículas repelem-se, ou seja, são submetidas a forças que tendem a afasta-las. Se as cargas das partículas têm sinais opostos, as partículas atraem-se, ou seja, são submetidas a forças que tendem a aproxima-las.
+A esta forças de atração ou de repulsão associada à carga elétrica dos objetos chama-se \textbf{força eletrostática}. A lei que permite calcular a força exercida por \textit{partículas} carregadas é chamada de \textbf{Lei de Coloumb}.
+Consideremos duas partículas carregadas (a {\textit{partícula 1}} e a {\textit{partícula 2}}). Suponhamos que a \textit{partícula 1} tem carga \textit{$q_1$} a \textit{partícula 2} tem carga \textit{$q_2$}.
+\newline
+A força a que está submetida a \textit{partícula 1} é dada por:
+% Lei de Coloumb (Fórmula)
+\newline
+\[ \vec{F} = k \frac{q_1 q_2}{r^2} \vec{r}\]
 \end{document}
