[Eletromagnetismo]: Avanço nas notas de Eletromagnetismo

--- a/2nd year/2nd Semester/Eletromagnetismo/eletromagnetismo.tex
+++ b/2nd year/2nd Semester/Eletromagnetismo/eletromagnetismo.tex
@@ -11,7 +11,7 @@
 \newpage
 \section{Introdução}
 A física do eletromagnetismo foi estudada pela primeira vez pelos filósofos da Grécia antiga, que descobriram que se um pedaço de âmbar fosse friccionado e depois aproximado de pedacinhos de palha, a palha seria atraída pelo âmbar. Hoje sabemos a atração entre o âmbar e a palha se deve a uma força elétrica. Os filósofos gregos também observaram que se um tipo de pedra (um íman natural) fosse aproximado de objeto de ferro, o objeto seria atraído pela pedra. Hoje sabemos que a atração entre os ímans e os objetos de ferro se deve a uma força magnética.
-
+% Capítulo 21
 \section{Cargas Elétricas}
 % Cargas Elétricas
 \subsection{Cargas Elétricas}
@@ -34,4 +34,37 @@ A força a que está submetida a \textit{partícula 1} é dada por:
 % Lei de Coloumb (Fórmula)
 \newline
 \[ \vec{F} = k \frac{q_1 q_2}{r^2} \vec{r}\]
+\newline
+em que \(\vec{r}\) é um vetor unitário na direção da reta que liga as duas partículas, \textit{r} é a distância entre as partículas e \textit{k} é uma constante. (Como qualquer vetor unitário, \(\vec{r}\) tem módulo 1 e é adimensional; a sua função é indicar uma orientação no espaço.)
+Por motivos históricos (e também para simplificar outras equações), a constante eletrostática \textit{k} é escrita na forma \(\frac{1}{4 \pi \epsilon}\). Nesse caso, o módulo da força de Coloumb é:
+\newline
+% Corrigir (para a forma real)
+\[ \vec{F} = k \frac{q_1 q_2}{r^2} \vec{r}\]
+\newline
+\subsection{A Carga é Quantizada}
+Todas as cargas positivas e negativas \textit{q} são da forma:
+\newline
+\[q = ne,   n = \pm 1, \pm 2, \pm 3, \dots \]
+\newline
+em que \textit{e}, a \textbf{carga elementar}, tem o valor aproximado:
+\newline
+\[e = 1.602 \times 10^{-19} \hspace{0.2cm}C \]
+\newline
+Quando uma grandeza física pode assumir apenas certos valores, dizemos que é \textbf{quantizada}; a carga elétrica é uma dessas grandezas. É possível, por exemplo, encontrar uma partícula sem carga elétrica é uma dessas grandezas. É possível, por exemplo, encontrar uma partícula sem carga elétrica ou com uma carga de \textit{+10e} ou \textit{-6e}, mas não uma partícula com uma carga  de \textit{3.57e}.
+\newpage
+\subsection{A Carga é Conservada}
+Quando friccionamos um bastão de vidro com um pedaço de seda, o bastão fica positivamente carregado. As medidas mostram que uma carga negativa de mesmo valor absoluto se acumula na seda. Isso sugere que o processo não cria cargas, mas apenas transfere cargas de um corpo para o outro, rompendo no processo a neutralidade de carga dos dois corpos. Esta hipótese de \textbf{conservação da carga elétrica}, proposta por Benjamin Franklin, foi comprovada exaustivamente, tanto no caso de objetos macroscópicos como no caso de átomos, núcleos e partículas elementares.
+% Capítulo 22
+\section{Campos Elétricos}
+\subsection{O Campo Elétrico}
+O campo elétrico é um \textit{campo vetorial}, uma vez que consiste numa distribuição de \textit{valores}, um para cada ponto de uma região em torno de um objeto eletricamente carregado, como uma bastão de vidro \textit{e.g}. Em princípo, podemos definir o campo elétrico num ponto das proximidades de um objeto carregado. Colocamos num ponto arbitrário \textit{P} uma carga positiva \textit{$q_0$} à qual chamamos \textit{carga de prova}, medimos a força eletrostática \(\vec{F}\) que atua sobre a carga \textit{$q_0$} e definimos o campo elétrico \(\vec{E}\) produzido pelo objeto através da seguinte equação:
+\newline
+\[\vec{E} \hspace{0.2cm}= \frac{\vec{F}}{q_0}\]
 \end{document}
+
+
+
+
+
+
+
