[Eletromagnetismo]: Avanços nas notas de Eletromagnetismo

--- a/2nd year/2nd Semester/Eletromagnetismo/eletromagnetismo.tex
+++ b/2nd year/2nd Semester/Eletromagnetismo/eletromagnetismo.tex
@@ -60,6 +60,19 @@ Quando friccionamos um bastão de vidro com um pedaço de seda, o bastão fica p
 O campo elétrico é um \textit{campo vetorial}, uma vez que consiste numa distribuição de \textit{valores}, um para cada ponto de uma região em torno de um objeto eletricamente carregado, como uma bastão de vidro \textit{e.g}. Em princípo, podemos definir o campo elétrico num ponto das proximidades de um objeto carregado. Colocamos num ponto arbitrário \textit{P} uma carga positiva \textit{$q_0$} à qual chamamos \textit{carga de prova}, medimos a força eletrostática \(\vec{F}\) que atua sobre a carga \textit{$q_0$} e definimos o campo elétrico \(\vec{E}\) produzido pelo objeto através da seguinte equação:
 \newline
 \[\vec{E} \hspace{0.2cm}= \frac{\vec{F}}{q_0}\]
+\newline
+Assim, o módulo do campo elétrico \(\vec{E}\) no ponto \textit{P} é \(\textit{E} = \textit{F/}\textit{$q_0$}\) e a orientação de \(\vec{E}\) é a força de \(\vec{F}\) que age sobre a carga de prova (que supomos ser \textit{positiva}). Para definir o campo elétrico numa região do espaço, definimos o campo em todos os pontos da região. A unidade de campo elétrico de SI é o newton por coloumb (N/C).
+\newline
+Embora seja usada uma carga de prova para definir o campo elétrico produzido por um objeto carregado, o campo existe independentemente da carga de prova.
+\subsection{Linhas de Campo Elétrico}
+A relação entre as linhas de campo e os vetores de campo elétrico é a seguinte:
+\begin{itemize}
+    \item Em qualquer ponto, a orientação de uma linha de campo retiĺinea ou a orientação da tangente a uma linha de campo não retilínea é a orientação do campo elétrico \(\vec{E}\) nesse ponto;
+    \item As linhas de campo são desenhadas de tal forma que o número de linhas por unidade de área, medido em plano perpendicular às linhas, é proporcional ao \textit{módulo} de \(\vec{E}\);
+\end{itemize}
+Assim, \textit{E} tem valores elevados nas regiões em que as linhas de campo estão mais próximas e valores pequenos nas regiões em que as linhas de campo estão mais afastadas.
+\subsection{Campo Elétrico Produzido por uma Carga Pontual}
+Para determinarmos o campo elétrico produzido a uma distância \textit{r} de uma carga pontual \textit{q}, colocamos uma carga de prova \textit{$q_0$} nesse ponto. De acordo com a lei de Coloumb, o módulo da força eletrostática que age sobre \textit{$q_0$} é dado por
 \end{document}
 
 
